test/bad/functions/args02.px

func f(s: String) def
    s = 5
    return

f()
